--- a/index.html
+++ b/index.html
@@ -22,29 +22,12 @@
 </head>
 
 <body>
-<<<<<<< HEAD
 
       <div class="main-menu">
                 <div class="container">
                         <nav class="navbar navbar-expand-lg">
                                 <div class="row">
                                         <div class="col-lg-1 col-md-1 col-6">
-=======
-        <div class="main-menu">
-                <div class="container">
-                        <div class="row">
-                                <div class="col-12">
-                                        
-                                </div>
-                        </div>
-                </div>
-        </div>
-    <!--    <div class="main-menu">
-                <div class="container">
-                        <nav class="navbar navbar-expand-lg">
-                                <div class="row">
-                                        <div class="col-lg-1 col-md-2 col-6">
->>>>>>> 996d6b9044b39bf7f707012080d00aaca3ee1d43
                                                 <a class="navbar-brand" href="#"><img src="asset/img/logo.png"
                                                                 alt=""></a>
                                         </div>
@@ -117,11 +100,7 @@
                                                                
 
                                                         </ul>
-<<<<<<< HEAD
                                                         <button class="btn btn-success Donate">
-=======
-                                                        <buatton class="btn btn-success Donate">
->>>>>>> 996d6b9044b39bf7f707012080d00aaca3ee1d43
                                                                         Donate</button>
                                                 </div>
 
@@ -129,11 +108,7 @@
                                 </div>
                         </nav>
                 </div>
-<<<<<<< HEAD
         </div>
-=======
-        </div>-->
->>>>>>> 996d6b9044b39bf7f707012080d00aaca3ee1d43
         <div class="hero">
                 <div class="heroText text-center"><span class="">We Are Dream</span>
                         <p>To delight all the children in the World</p>
@@ -176,6 +151,8 @@
                                                 <img src="asset/img/ss1.png" alt="">
                                         </div>
                                         <h6>Qurbani</h6>
+                                        <button class="btn  Donate WorkDonate">
+                                                        Donate</button>
                                 </div>
                         </div>
                 </div>
