--- a/Donat.html
+++ b/Donat.html
@@ -14,11 +14,10 @@
     <link rel="stylesheet" href="asset/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
+
+    <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
-    <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="asset/css/lightslider.css" type="text/css">
-    <link rel="stylesheet" href="asset/css/lightslider.min.css" type="text/css">
     <link rel="stylesheet" href="asset/css/style.css" type="text/css">
 </head>
 
@@ -28,10 +27,81 @@
 
     </div>
     <div class="pageTitle">
-        <span>Gallery</span>
+        <span>Donate</span>
     </div>
     <div class="DonatCont">
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="donateSlider owl-carousel">
+                        <div class="donatCarouselItem">
+                            <div class="donateImgCont">
+                                <div class="overlay"></div>
+                                <img src="asset/img/qurbani.png" alt="">
+                            </div>
+                            <div class="donateDesc">
+                                <h4>Qurbani 2020</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis culpa neque optio
+                                    voluptas recusandae numquam esse molestias facere nisi animi, quia corrupti quasi
+                                    beatae saepe. Soluta tenetur quasi voluptates!</p>
+                                <p>consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
+                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
+                                    temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
+                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
+                                    temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
+                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
+                                    temjpor incididunt ut labore et dolore magan</p>
+                            </div>
+
+                        </div>
+                        <div class="donatCarouselItem">
+                            <div class="donateImgCont">
+                                <div class="overlay"></div>
+                                <img src="asset/img/qurbani.png" alt="">
+                            </div>
+                            <div class="donateDesc">
+                                    <h4>Qurbani 2020</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis culpa neque optio
+                                        voluptas recusandae numquam esse molestias facere nisi animi, quia corrupti quasi
+                                        beatae saepe. Soluta tenetur quasi voluptates!</p>
+                                    <p>consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
+                                        magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
+                                        temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
+                                        consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
+                                        magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
+                                        temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
+                                        consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
+                                        magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
+                                        temjpor incididunt ut labore et dolore magan</p>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="donatBox">
+                        <h4>Donate</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
+                            doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum, fugit voluptatibus
+                            necessitatibus recusandae. Non veniam aspernatur dignissimos in quaerat.</p>
+                        <form action="" class="donateForm">
+                            <div class="form-group inlinegroup">
+                                <input type="text" placeholder="Name" class="form-control ">
+                            </div>
+                            <div class="form-group inlinegroup lastinput">
+                                <input type="email" placeholder="email" class="form-control ">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" placeholder="custom" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <div class="footer">
         <div class="container">
@@ -115,7 +185,6 @@
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
-    <script src="asset/js/lightslider.js"></script>
     <script src="asset/js/main.js"></script>
 
 </body>
