--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="asset/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
+    <script src="https://kit.fontawesome.com/71655fdb14.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/owl.carousel.min.css" type="text/css">
@@ -27,85 +28,58 @@
 
     </div>
     <div class="pageTitle">
-        <span>Donate</span>
+        <span>Contact</span>
     </div>
-    <div class="DonatCont">
+    <div id="map"></div>
+
+    <div class="ContactCont">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="donateSlider owl-carousel">
-                        <div class="donatCarouselItem">
-                            <div class="donateImgCont">
-                                <div class="overlay"></div>
-                                <img src="asset/img/qurbani.png" alt="">
-                            </div>
-                            <div class="donateDesc">
-                                <h4>Qurbani 2020</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis culpa neque optio
-                                    voluptas recusandae numquam esse molestias facere nisi animi, quia corrupti quasi
-                                    beatae saepe. Soluta tenetur quasi voluptates!</p>
-                                <p>consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
-                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
-                                    temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
-                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
-                                    temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
-                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
-                                    temjpor incididunt ut labore et dolore magan</p>
-                            </div>
+                <div class="col-lg-8 col-md-8 col-12">
 
-                        </div>
-                        <div class="donatCarouselItem">
-                            <div class="donateImgCont">
-                                <div class="overlay"></div>
-                                <img src="asset/img/qurbani.png" alt="">
-                            </div>
-                            <div class="donateDesc">
-                                <h4>Qurbani 2020</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis culpa neque optio
-                                    voluptas recusandae numquam esse molestias facere nisi animi, quia corrupti quasi
-                                    beatae saepe. Soluta tenetur quasi voluptates!</p>
-                                <p>consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
-                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
-                                    temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
-                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
-                                    temjpor incididunt ut labore et dolore magana Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing aelit, sdesd eiusfmod temjpor incididunt ut labore et dolore
-                                    magana Lorem ipsum dolor sit amet, consectetur adipiscing aelit, sdesd eiusfmod
-                                    temjpor incididunt ut labore et dolore magan</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="donatBox">
-                        <h4>Donate</h4>
+                    <div class="contactFormBox">
+                        <h4>Contact Form</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
-                            doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum, fugit voluptatibus
-                            necessitatibus recusandae. Non veniam aspernatur dignissimos in quaerat.</p>
+                            doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum,.</p>
                         <form action="" class="donateForm">
-                            <div class="form-group inlinegroup">
+                            <div class="form-group ">
                                 <input type="text" placeholder="Name" class="form-control ">
                             </div>
-                            <div class="form-group inlinegroup lastinput">
+                            <div class="form-group">
                                 <input type="email" placeholder="email" class="form-control ">
                             </div>
-                            
-                          <div class="form-group radioGroup"> <label class="form-control moneyLabel" >100$<input type="radio"  class="money" id="" name="" value="100$"> </label></div>
-                          <div class="form-group radioGroup"> <label class="form-control moneyLabel" >200$<input type="radio"  class="money" id="" name="" value="200$"> </label></div>
-                          <div class="form-group radioGroup"> <label class="form-control moneyLabel">300$<input type="radio"  class="money" id="" name="" value="300$"> </label></div>
-                          <div class="form-group radioGroup"> <label class="form-control moneyLabel" >400$<input type="radio"  class="money" id="" name="" value="400$"> </label></div>
-                          <div class="form-group radioGroup"> <label class="form-control moneyLabel">500$<input type="radio"  class="money" id="" name="" value="500$"> </label></div>
-                          <div class="form-group radioGroup"> <label class="form-control moneyLabel" >custom<input type="radio"  class="money" id="" name="" value="custom"> </label></div>
-
                             <div class="form-group">
-                                <input type="text" placeholder="custom" class="form-control">
+                                <input type="text" placeholder="subject" class="form-control">
                             </div>
                             <div class="form-group">
                                 <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
                             </div>
                         </form>
                     </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="informationBox contactFormBox">
+                        <h4>Contact Information</h4>
+                        <ul>
+                            <li class="ContactinformationList">
+                                <span><i class="fas fa-phone-alt"></i> +970 598 222 999</span>
+                            </li>
+                            <li class="ContactinformationList">
+                                <span><i class="fas fa-at"></i> contact@jisralamal.com</span>
+                            </li>
+                            <li class="ContactinformationList">
+                                <span><i class="fas fa-fax"></i> +970 598 222 986</span>
+                            </li>
+                            <li class="socialConact">
+                               <span class="facebook"><a class="socialLink" href="#"><i class="fab fa-facebook-f"></i></a></span>
+                               <span class="twitter"><a class="socialLink" href="#"><i class="fab fa-twitter"></i></a></span>
+                               <span class="youtube" ><a class="socialLink" href="#"><i class="fab fa-youtube"></i></a></span>
+
+                            </li>
+                        </ul>
+
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -188,12 +162,25 @@
             </div>
         </div>
     </div>
+    <script>
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 8
+            });
+        }
+    </script>
     <script src="asset/js/jquery.min.js"></script>
     <script src="asset/js/popper.min.js"></script>
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWZJ97WjmF5OBeftsvQBnGuYoWg8VNh-g&callback=initMap"
+        async defer></script>
     <script src="asset/js/main.js"></script>
+
+
 
 </body>
 
