--- a/index.html
+++ b/index.html
@@ -19,26 +19,81 @@
         <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
         <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
         <link rel="stylesheet" href="asset/css/style.css" type="text/css">
+        <link rel="stylesheet" href="asset/css/responsive.css" type="text/css">
 </head>
 
 <body>
 
-      <div class="main-menu">
+        <div class="main-menu">
+
+
                 <div class="container">
-                        <nav class="navbar navbar-expand-lg">
-                                <div class="row">
-                                        <div class="col-lg-1 col-md-1 col-6">
+                        <div class="row">
+                                <nav class="navbar navbar-custom navbar-expand-lg">
+                                        <div class="collapse navbar-collapse  d-lg-none d-md-none" id="navbarNav">
+                                                <ul class="navbar-nav">
+                                                        <li class="nav-item active">
+                                                                <a class="nav-link" href="#">Home</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                                <a class="nav-link" href="#">About</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                                <a class="nav-link dropdown-toggle" href="#"
+                                                                        id="navbarDropdown" role="button"
+                                                                        data-toggle="dropdown" aria-haspopup="true"
+                                                                        aria-expanded="false">Our
+                                                                        Projects</a>
+                                                                <div class="dropdown-menu"
+                                                                        aria-labelledby="navbarDropdown">
+                                                                        <a class="dropdown-item" href="#">Action</a>
+                                                                        <a class="dropdown-item" href="#">Another
+                                                                                action</a>
+                                                                        <div class="dropdown-divider"></div>
+                                                                        <a class="dropdown-item" href="#">Something else
+                                                                                here</a>
+                                                                </div>
+                                                        <li class="nav-item">
+                                                                <a class="nav-link " href="#" tabindex="-1">Media
+                                                                        Center</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                                <a class="nav-link " href="#" tabindex="-1">Donate</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                                <a class="nav-link " href="#" tabindex="-1">Contact</a>
+                                                        </li>
+                                                </ul>
+                                                <div class="social d-lg-none d-md-none d-block">
+                                                        <ul class="navbar-nav">
+
+                                                                <li class="nav-item">
+                                                                        <a href="#" class="nav-link "><span
+                                                                                        class="languge">عربي</span>
+                                                                        </a>
+                                                                </li>
+
+
+                                                        </ul>
+                                                        <button class="btn btn-success Donate">
+                                                                Donate</button>
+                                                </div>
+
+
+                                        </div>
+                                        <div class="col-lg-2 col-md-1 col-12 order-2 order-md-1 clearfix">
                                                 <a class="navbar-brand" href="#"><img src="asset/img/logo.png"
                                                                 alt=""></a>
                                         </div>
-                                        <div class="col-lg-8 col-md-8 col-6">
+                                        <div class="col-lg-8 col-md-9 col-12 order-1 order-md-2">
 
                                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                                                         data-target="#navbarNav" aria-controls="navbarNav"
                                                         aria-expanded="false" aria-label="Toggle navigation">
                                                         <span class="navbar-toggler-icon"></span>
                                                 </button>
-                                                <div class="collapse navbar-collapse" id="navbarNav">
+                                                <div class="collapse navbar-collapse d-none d-lg-block d-md-block"
+                                                        id="navbarNav">
                                                         <ul class="navbar-nav">
                                                                 <li class="nav-item active">
                                                                         <a class="nav-link" href="#">Home</a>
@@ -72,41 +127,53 @@
                                                                 </li>
                                                                 <li class="nav-item">
                                                                         <a class="nav-link " href="#"
-                                                                                tabindex="-1">Donat</a>
+                                                                                tabindex="-1">Donate</a>
                                                                 </li>
                                                                 <li class="nav-item">
                                                                         <a class="nav-link " href="#"
                                                                                 tabindex="-1">Contact</a>
                                                                 </li>
                                                         </ul>
+                                                        <div class="social d-lg-none d-md-none d-block">
+                                                                <ul class="navbar-nav">
+
+                                                                        <li class="nav-item">
+                                                                                <a href="#" class="nav-link "><span
+                                                                                                class="languge">عربي</span>
+                                                                                </a>
+                                                                        </li>
+
+
+                                                                </ul>
+                                                                <button class="btn btn-success Donate">
+                                                                        Donate</button>
+                                                        </div>
+
+
                                                 </div>
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-6">
+                                        <div
+                                                class="col-lg-2 col-md-2 col-6 order-2 order-md-3 d-lg-block d-md-block d-none">
                                                 <div class="social">
                                                         <ul class="navbar-nav">
-                                                                <li class="nav-item">
-                                                                        <a href="#" class="nav-link facebook "><i
-                                                                                        class="fab fa-facebook-f"></i></a>
-                                                                </li>
-                                                                <li class="nav-item">
-                                                                        <a href="#" class="nav-link twitter"><i
-                                                                                        class="fab fa-twitter"></i></a>
-                                                                </li>
+
                                                                 <li class="nav-item">
                                                                         <a href="#" class="nav-link "><span
                                                                                         class="languge">عربي</span>
                                                                         </a>
                                                                 </li>
-                                                               
+
 
                                                         </ul>
                                                         <button class="btn btn-success Donate">
-                                                                        Donate</button>
+                                                                Donate</button>
                                                 </div>
 
                                         </div>
-                                </div>
-                        </nav>
+
+
+                                </nav>
+                        </div>
                 </div>
         </div>
         <div class="hero">
@@ -115,17 +182,19 @@
                         <button class="btn-success Donate readMore">Read More</button>
                 </div>
                 <div class="heroSlider owl-carousel">
-
                         <div class="sliderItem">
+                                <div class="overlay"></div>
                                 <img src="asset/img/herobg.jpg" alt="">
                         </div>
                         <div class="sliderItem">
-                                <img src="asset/img/herobg.jpg" alt="">
 
+                                <div class="overlay"></div>
+                                <img src="asset/img/herobg.jpg" alt="">
                         </div>
                         <div class="sliderItem">
-                                <img src="asset/img/herobg.jpg" alt="">
 
+                                <div class="overlay"></div>
+                                <img src="asset/img/herobg.jpg" alt="">
                         </div>
                 </div>
 
@@ -135,12 +204,20 @@
         </div>
         <div class="workSection text-center">
 
-                <div class="title">
-                        <h4 class="sectionTitle">Work Fileds</h4>
-                        <span class="sectionTitleDetails"> Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit. Accusantium nobis explicabo esse quos illo ut?
-                                Possimus ad nobis aliquam numquam consequuntur obcaecati rem eveniet,
-                                ratione provident dolorum ducimus commodi tenetur. </span>
+                <div class="container">
+                        <div class="row justify-content-center">
+                                <div class="col-lg-10 col-md-10 col-12">
+                                        <div class="title">
+                                                <h4 class="sectionTitle">Work Fileds</h4>
+                                                <span class="sectionTitleDetails"> Lorem, ipsum dolor sit amet
+                                                        consectetur
+                                                        adipisicing elit. Accusantium nobis explicabo esse quos illo ut?
+                                                        Possimus ad nobis aliquam numquam consequuntur obcaecati rem
+                                                        eveniet,
+                                                        ratione provident dolorum ducimus commodi tenetur. </span>
+                                        </div>
+                                </div>
+                        </div>
                 </div>
 
                 <div class="workSlider owl-carousel">
@@ -152,7 +229,7 @@
                                         </div>
                                         <h6>Qurbani</h6>
                                         <button class="btn  Donate WorkDonate">
-                                                        Donate</button>
+                                                Donate</button>
                                 </div>
                         </div>
                 </div>
@@ -166,7 +243,7 @@
 
                                         <div class="newsSlider owl-carousel">
                                                 <div class="newsSliderItem">
-                                                        <div class="card">
+                                                        <div class="card newsCard">
                                                                 <img src="asset/img/n1.png" class="card-img-top"
                                                                         alt="...">
                                                                 <div class="card-body">
