--- a/index.html
+++ b/index.html
@@ -29,58 +29,57 @@
 
                 <div class="container">
                         <div class="row">
-                                <nav class="navbar navbar-custom navbar-expand-lg">
-                                        <div class="collapse navbar-collapse  d-lg-none d-md-none" id="navbarNav">
+                                <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
+                                        <ul class="navbar-nav">
+                                                <li class="nav-item active">
+                                                        <a class="nav-link" href="#">Home</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                        <a class="nav-link" href="#">About</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                                role="button" data-toggle="dropdown"
+                                                                aria-haspopup="true" aria-expanded="false">Our
+                                                                Projects</a>
+                                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                                <a class="dropdown-item" href="#">Action</a>
+                                                                <a class="dropdown-item" href="#">Another
+                                                                        action</a>
+                                                                <div class="dropdown-divider"></div>
+                                                                <a class="dropdown-item" href="#">Something else
+                                                                        here</a>
+                                                        </div>
+                                                <li class="nav-item">
+                                                        <a class="nav-link " href="#" tabindex="-1">Media
+                                                                Center</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                        <a class="nav-link " href="#" tabindex="-1">Donate</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                        <a class="nav-link " href="#" tabindex="-1">Contact</a>
+                                                </li>
+                                        </ul>
+                                        <div class="social d-lg-none d-md-none d-block">
                                                 <ul class="navbar-nav">
-                                                        <li class="nav-item active">
-                                                                <a class="nav-link" href="#">Home</a>
-                                                        </li>
+
                                                         <li class="nav-item">
-                                                                <a class="nav-link" href="#">About</a>
+                                                                <a href="#" class="nav-link "><span
+                                                                                class="languge">عربي</span>
+                                                                </a>
                                                         </li>
-                                                        <li class="nav-item">
-                                                                <a class="nav-link dropdown-toggle" href="#"
-                                                                        id="navbarDropdown" role="button"
-                                                                        data-toggle="dropdown" aria-haspopup="true"
-                                                                        aria-expanded="false">Our
-                                                                        Projects</a>
-                                                                <div class="dropdown-menu"
-                                                                        aria-labelledby="navbarDropdown">
-                                                                        <a class="dropdown-item" href="#">Action</a>
-                                                                        <a class="dropdown-item" href="#">Another
-                                                                                action</a>
-                                                                        <div class="dropdown-divider"></div>
-                                                                        <a class="dropdown-item" href="#">Something else
-                                                                                here</a>
-                                                                </div>
-                                                        <li class="nav-item">
-                                                                <a class="nav-link " href="#" tabindex="-1">Media
-                                                                        Center</a>
-                                                        </li>
-                                                        <li class="nav-item">
-                                                                <a class="nav-link " href="#" tabindex="-1">Donate</a>
-                                                        </li>
-                                                        <li class="nav-item">
-                                                                <a class="nav-link " href="#" tabindex="-1">Contact</a>
-                                                        </li>
+
+
                                                 </ul>
-                                                <div class="social d-lg-none d-md-none d-block">
-                                                        <ul class="navbar-nav">
-
-                                                                <li class="nav-item">
-                                                                        <a href="#" class="nav-link "><span
-                                                                                        class="languge">عربي</span>
-                                                                        </a>
-                                                                </li>
-
-
-                                                        </ul>
-                                                        <button class="btn btn-success Donate">
-                                                                Donate</button>
-                                                </div>
-
-
+                                                <button class="btn btn-success Donate">
+                                                        Donate</button>
                                         </div>
+
+
+                                </div>
+                                <nav class="navbar navbar-custom navbar-expand-lg">
+
                                         <div class="col-lg-2 col-md-1 col-12 order-2 order-md-1 clearfix">
                                                 <a class="navbar-brand" href="#"><img src="asset/img/logo.png"
                                                                 alt=""></a>
