--- a/pay.html
+++ b/pay.html
@@ -28,38 +28,42 @@
 
     </div>
     <div class="pageTitle">
-        <span>Contact</span>
+        <span>Donate</span>
     </div>
     <div id="map"></div>
 
     <div class="ContactCont">
-        <div class="container">
+        <div class="container ">
             <div class="row">
 
-                <div class="col-lg-8 col-md-8 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
 
-                    <div class="contactFormBox">
-                        <h4>Contact Form</h4>
+                    <div class="contactFormBox CardBox">
+                        <h4>Card Infornmation</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
                             doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum,.</p>
-                        <form action="" class="donateForm">
+                        <form action="" class="donateForm cardForm">
                             <div class="form-group ">
                                 <input type="text" placeholder="Name" class="form-control ">
                             </div>
                             <div class="form-group">
-                                <input type="email" placeholder="email" class="form-control ">
+                                <input type="text" placeholder="0000 0000 0000 0000" class="form-control ">
                             </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="subject" class="form-control">
+                            <div class="form-group monthyear">
+                                <input type="text" placeholder="Month" class="form-control">
                             </div>
-                            <div class="form-group">
-                                <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
+                            <div class="form-group monthyear">
+                                <input type="text" placeholder="Year" class="form-control">
                             </div>
+                            <div class="form-group monthyear">
+                                <input type="text" placeholder="CVV" class="form-control">
+                            </div>
+
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="informationBox contactFormBox">
+                <div class="col-lg-6 col-md-6 col-12">
+                    <div class="informationBox contactFormBox CardBox">
                         <h4>Contact Information</h4>
                         <ul>
                             <li class="ContactinformationList">
@@ -72,9 +76,12 @@
                                 <span><i class="fas fa-fax"></i> +970 598 222 986</span>
                             </li>
                             <li class="socialConact">
-                               <span class="facebook"><a class="socialLink" href="#"><i class="fab fa-facebook-f"></i></a></span>
-                               <span class="twitter"><a class="socialLink" href="#"><i class="fab fa-twitter"></i></a></span>
-                               <span class="youtube" ><a class="socialLink" href="#"><i class="fab fa-youtube"></i></a></span>
+                                <span class="facebook"><a class="socialLink" href="#"><i
+                                            class="fab fa-facebook-f"></i></a></span>
+                                <span class="twitter"><a class="socialLink" href="#"><i
+                                            class="fab fa-twitter"></i></a></span>
+                                <span class="youtube"><a class="socialLink" href="#"><i
+                                            class="fab fa-youtube"></i></a></span>
 
                             </li>
                         </ul>
