--- a/Project-single.html
+++ b/Project-single.html
@@ -28,56 +28,88 @@
 
     </div>
     <div class="pageTitle">
-        <span>Contact</span>
+        <span>Qurbani 2019</span>
     </div>
-    <div id="map"></div>
 
-    <div class="ContactCont">
+    <div class="ContactCont projectCont">
         <div class="container">
             <div class="row">
+                <div class="col-12">
+                    <div class="projBox">
+                        <div class="ProjImg">
+                            <img src="asset/img/qurbani.png" class="card-img-top" alt="...">
+                            <div class="projtext clearfix">
+                                <button class="btn btn-success projectDonat float-left">
+                                    Donate</button>
+                                <h4 class="card-title float-right">Qurbani</h4>
 
-                <div class="col-lg-8 col-md-8 col-12">
+                            </div>
 
-                    <div class="contactFormBox">
-                        <h4>Contact Form</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
-                            doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum,.</p>
-                        <form action="" class="donateForm">
-                            <div class="form-group ">
-                                <input type="text" placeholder="Name" class="form-control ">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" placeholder="email" class="form-control ">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="subject" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
-                            </div>
-                        </form>
+                        </div>
+
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis quia, nemo quis est
+                            pariatur delectus ipsam amet vel commodi ex aut alias blanditiis ad fuga perspiciatis
+                            eligendi
+                            mollitia, nulla quam.
+                            <br>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus molestias similique nostrum
+                            voluptatem ex iusto, mollitia consequuntur optio laudantium rem distinctio placeat expedita
+                            quaerat explicabo autem vero officia non recusandae.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum ea officiis vitae id ex
+                            veritatis omnis, saepe animi repellendus eaque, facere eveniet dolores dicta quas? In
+                            voluptatibus cumque qui vel.
+                        </p>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="informationBox contactFormBox">
-                        <h4>Contact Information</h4>
-                        <ul>
-                            <li class="ContactinformationList">
-                                <span><i class="fas fa-phone-alt"></i> +970 598 222 999</span>
-                            </li>
-                            <li class="ContactinformationList">
-                                <span><i class="fas fa-at"></i> contact@jisralamal.com</span>
-                            </li>
-                            <li class="ContactinformationList">
-                                <span><i class="fas fa-fax"></i> +970 598 222 986</span>
-                            </li>
-                            <li class="socialConact">
-                               <span class="facebook"><a class="socialLink" href="#"><i class="fab fa-facebook-f"></i></a></span>
-                               <span class="twitter"><a class="socialLink" href="#"><i class="fab fa-twitter"></i></a></span>
-                               <span class="youtube" ><a class="socialLink" href="#"><i class="fab fa-youtube"></i></a></span>
 
-                            </li>
-                        </ul>
+                    <div class="projSliderSection">
+                        <h6>More Of Fields</h6>
+                        <div class="projectSlider owl-carousel">
+                            <div class="sliderItemProj">
+                                <div class="card newsCard projectPage">
+                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
+                                    <div class="card-body clearfix">
+                                        <h4 class="card-title float-left">Qurbani</h4>
+                                        <button class="btn btn-success projectDonat float-right">
+                                            Donate</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="sliderItemProj">
+                                <div class="card newsCard projectPage">
+                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
+                                    <div class="card-body clearfix">
+                                        <h4 class="card-title float-left">Qurbani</h4>
+                                        <button class="btn btn-success projectDonat float-right">
+                                            Donate</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="sliderItemProj">
+                                <div class="card newsCard projectPage">
+                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
+                                    <div class="card-body clearfix">
+                                        <h4 class="card-title float-left">Qurbani</h4>
+                                        <button class="btn btn-success projectDonat float-right">
+                                            Donate</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="sliderItemProj">
+                                <div class="card newsCard projectPage">
+                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
+                                    <div class="card-body clearfix">
+                                        <h4 class="card-title float-left">Qurbani</h4>
+                                        <button class="btn btn-success projectDonat float-right">
+                                            Donate</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
 
@@ -163,22 +195,13 @@
             </div>
         </div>
     </div>
-    <script>
-        var map;
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: -34.397, lng: 150.644 },
-                zoom: 8
-            });
-        }
-    </script>
+
     <script src="asset/js/jquery.min.js"></script>
     <script src="asset/js/popper.min.js"></script>
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWZJ97WjmF5OBeftsvQBnGuYoWg8VNh-g&callback=initMap"
-        async defer></script>
+
     <script src="asset/js/main.js"></script>
 
 
