--- a/videos.html
+++ b/videos.html
@@ -14,11 +14,9 @@
     <link rel="stylesheet" href="asset/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-    <script src="https://kit.fontawesome.com/71655fdb14.js" crossorigin="anonymous"></script>
-
-    <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
+    <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/style.css" type="text/css">
 </head>
 
@@ -28,60 +26,60 @@
 
     </div>
     <div class="pageTitle">
-        <span>Contact</span>
+        <span>Help Gallery</span>
     </div>
-    <div id="map"></div>
-
-    <div class="ContactCont">
+    <div class="GalleryCont">
         <div class="container">
             <div class="row">
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="Galleryimg Video">
 
-                <div class="col-lg-8 col-md-8 col-12">
-
-                    <div class="contactFormBox">
-                        <h4>Contact Form</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
-                            doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum,.</p>
-                        <form action="" class="donateForm">
-                            <div class="form-group ">
-                                <input type="text" placeholder="Name" class="form-control ">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" placeholder="email" class="form-control ">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="subject" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
-                            </div>
-                        </form>
+                        <iframe  src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+                        <span class="imgtext">Send a food parcels for children</span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="informationBox contactFormBox">
-                        <h4>Contact Information</h4>
-                        <ul>
-                            <li class="ContactinformationList">
-                                <span><i class="fas fa-phone-alt"></i> +970 598 222 999</span>
-                            </li>
-                            <li class="ContactinformationList">
-                                <span><i class="fas fa-at"></i> contact@jisralamal.com</span>
-                            </li>
-                            <li class="ContactinformationList">
-                                <span><i class="fas fa-fax"></i> +970 598 222 986</span>
-                            </li>
-                            <li class="socialConact">
-                               <span class="facebook"><a class="socialLink" href="#"><i class="fab fa-facebook-f"></i></a></span>
-                               <span class="twitter"><a class="socialLink" href="#"><i class="fab fa-twitter"></i></a></span>
-                               <span class="youtube" ><a class="socialLink" href="#"><i class="fab fa-youtube"></i></a></span>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="Galleryimg Video">
 
-                            </li>
-                        </ul>
-
+                        <iframe  src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+                        <span class="imgtext">Send a food parcels for children</span>
                     </div>
-
                 </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="Galleryimg Video">
+
+                        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+                        <span class="imgtext">Send a food parcels for children</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="Galleryimg Video">
+
+                        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+                        <span class="imgtext">Send a food parcels for children</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="Galleryimg Video">
+
+                        <iframe  src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+                        <span class="imgtext">Send a food parcels for children</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="Galleryimg Video">
+
+                        <iframe  src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe>
+                        <span class="imgtext">Send a food parcels for children</span>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -163,25 +161,12 @@
             </div>
         </div>
     </div>
-    <script>
-        var map;
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: -34.397, lng: 150.644 },
-                zoom: 8
-            });
-        }
-    </script>
     <script src="asset/js/jquery.min.js"></script>
     <script src="asset/js/popper.min.js"></script>
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWZJ97WjmF5OBeftsvQBnGuYoWg8VNh-g&callback=initMap"
-        async defer></script>
     <script src="asset/js/main.js"></script>
-
-
 
 </body>
 
