--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
                 <div class="col-lg-8 col-md-8 col-12">
 
-                    <div class="contactFormBox">
+                    <div class="contactFormBox clearfix">
                         <h4>Contact Form</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
                             doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum,.</p>
@@ -55,7 +55,10 @@
                             <div class="form-group">
                                 <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
                             </div>
+                            <button type="submit" class="btn form-btn float-right">send</button>
+
                         </form>
+
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
