--- a/news-single.html
+++ b/news-single.html
@@ -104,51 +104,25 @@
                     </div>
 
                     <div class="projSliderSection">
-                        <h6>More Of Fields</h6>
-                        <div class="projectSlider owl-carousel">
-                            <div class="sliderItemProj">
-                                <div class="card newsCard projectPage">
-                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
-                                    <div class="card-body clearfix">
-                                        <h4 class="card-title float-left">Qurbani</h4>
-                                        <button class="btn btn-success projectDonat float-right">
-                                            Donate</button>
+                        <div class="newsSlider owl-carousel">
+                            <div class="newsSliderItem singleNews">
+                                <div class="card newsCard">
+                                    <img src="asset/img/n1.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Child Learning Campign
+                                        </h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet
+                                            consectetur adipisicing elit. Doloremque
+                                            harum porro assumenda. Quasi excepturi
+                                            dolorum ad tempore magnam tempora, iusto
+                                            pariatur libero praesentium corporis ut
+                                            exercitationem, ducimus quae totam quam!
+                                        </p>
                                     </div>
-
+                                    <button class="btn btn-success readMoreNews NewsPagebtn ">
+                                        Read More</button>
                                 </div>
-                            </div>
-                            <div class="sliderItemProj">
-                                <div class="card newsCard projectPage">
-                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
-                                    <div class="card-body clearfix">
-                                        <h4 class="card-title float-left">Qurbani</h4>
-                                        <button class="btn btn-success projectDonat float-right">
-                                            Donate</button>
-                                    </div>
 
-                                </div>
-                            </div>
-                            <div class="sliderItemProj">
-                                <div class="card newsCard projectPage">
-                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
-                                    <div class="card-body clearfix">
-                                        <h4 class="card-title float-left">Qurbani</h4>
-                                        <button class="btn btn-success projectDonat float-right">
-                                            Donate</button>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="sliderItemProj">
-                                <div class="card newsCard projectPage">
-                                    <img src="asset/img/s2.png" class="card-img-top" alt="...">
-                                    <div class="card-body clearfix">
-                                        <h4 class="card-title float-left">Qurbani</h4>
-                                        <button class="btn btn-success projectDonat float-right">
-                                            Donate</button>
-                                    </div>
-
-                                </div>
                             </div>
                         </div>
 
@@ -170,6 +144,41 @@
                             <li><a href="">Poor</a></li>
                             <li><a href="">Life</a></li>
                         </ul>
+                    </div>
+                    <div class="searchBox categ pop">
+                        <h4 class="catgTitle">Popular Posts</h4>
+                        <div class="PopularPostBox clearfix">
+                            <div class="PopularImg float-left">
+                                <img src="asset/img/pop1.png" alt="">
+                            </div>
+                            <div class="PopularDesc float-left">
+                                <span>Help poor people to save thier life</span>
+                            </div>
+                        </div>
+                        <div class="PopularPostBox clearfix">
+                            <div class="PopularImg float-left">
+                                <img src="asset/img/pop1.png" alt="">
+                            </div>
+                            <div class="PopularDesc float-left">
+                                <span>Help poor people to save thier life</span>
+                            </div>
+                        </div>
+                        <div class="PopularPostBox clearfix">
+                            <div class="PopularImg float-left">
+                                <img src="asset/img/pop1.png" alt="">
+                            </div>
+                            <div class="PopularDesc float-left">
+                                <span>Help poor people to save thier life</span>
+                            </div>
+                        </div>
+                        <div class="PopularPostBox clearfix">
+                            <div class="PopularImg float-left">
+                                <img src="asset/img/pop1.png" alt="">
+                            </div>
+                            <div class="PopularDesc float-left">
+                                <span>Help poor people to save thier life</span>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
