--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="asset/css/owl.carousel.min.css" type="text/css">
         <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
         <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
         <link rel="stylesheet" href="asset/css/style.css" type="text/css">
         <link rel="stylesheet" href="asset/css/responsive.css" type="text/css">
 </head>
@@ -219,9 +221,42 @@
                         </div>
                 </div>
 
-                <div class="workSlider owl-carousel">
+                <div class="workSlider owl-carousel slideInRight animated delay-.2s">
                         <div class="worksliderItem text-center">
-                                <img src="asset/img/s2.png" class="workslideImg" alt="">
+                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
+                                <div class="sliderCont text-center">
+                                        <div class="imgCont">
+                                                <img src="asset/img/ss1.png" alt="">
+                                        </div>
+                                        <h6>Qurbani</h6>
+                                        <button class="btn  Donate WorkDonate">
+                                                Donate</button>
+                                </div>
+                        </div>
+                        <div class="worksliderItem text-center ">
+                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
+                                <div class="sliderCont text-center">
+                                        <div class="imgCont">
+                                                <img src="asset/img/ss1.png" alt="">
+                                        </div>
+                                        <h6>Qurbani</h6>
+                                        <button class="btn  Donate WorkDonate">
+                                                Donate</button>
+                                </div>
+                        </div>
+                        <div class="worksliderItem text-center ">
+                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
+                                <div class="sliderCont text-center">
+                                        <div class="imgCont">
+                                                <img src="asset/img/ss1.png" alt="">
+                                        </div>
+                                        <h6>Qurbani</h6>
+                                        <button class="btn  Donate WorkDonate">
+                                                Donate</button>
+                                </div>
+                        </div>
+                        <div class="worksliderItem text-center ">
+                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
                                 <div class="sliderCont text-center">
                                         <div class="imgCont">
                                                 <img src="asset/img/ss1.png" alt="">
@@ -271,7 +306,8 @@
                         <div class="row">
                                 <div class="col-lg-3 col-md-3 col-6">
                                         <div class="countCont text-center">
-                                                <div class="counticon">
+                                                <div class="counticon zoomIn" animation-duration=".2"
+                                                        animation-delay=".2">
                                                         <img src="asset/img/count1.png" alt="">
                                                 </div>
                                                 <div class="countnum">
